# cmakeTemplate

./: .gitignore  CMakeLists.txt  build.sh
